--- a/package.json
+++ b/package.json
@@ -1,26 +1,32 @@
 {
-  "name": "abhiaagarwal",
-  "type": "module",
-  "version": "0.0.1",
-  "scripts": {
-    "dev": "astro dev",
-    "build": "astro build",
-    "preview": "astro preview",
-    "astro": "astro"
-  },
-  "dependencies": {
-    "@astrojs/react": "^4.2.4",
-    "@tailwindcss/vite": "^4.1.4",
-    "@types/react": "^19.1.2",
-    "@types/react-dom": "^19.1.2",
-    "astro": "^5.7.4",
-    "react": "^19.1.0",
-    "react-dom": "^19.1.0",
-    "rollup-plugin-visualizer": "^5.14.0",
-    "tailwindcss": "^4.1.4"
-  },
-  "devDependencies": {
-    "@types/bun": "^1.2.10",
-    "prettier": "^3.5.3"
-  }
+    "name": "abhiaagarwal",
+    "type": "module",
+    "version": "0.0.1",
+    "scripts": {
+        "dev": "astro dev",
+        "build": "astro build",
+        "preview": "astro preview",
+        "astro": "astro"
+    },
+    "dependencies": {
+        "@astrojs/react": "^4.2.4",
+        "@astrojs/sitemap": "^3.3.0",
+        "@fontsource-variable/fira-code": "^5.2.5",
+        "@fontsource-variable/lora": "^5.2.5",
+        "@fontsource/fira-sans": "^5.2.5",
+        "@tailwindcss/vite": "^4.1.4",
+        "@types/react": "^19.1.2",
+        "@types/react-dom": "^19.1.2",
+        "astro": "^5.7.4",
+        "react": "^19.1.0",
+        "react-dom": "^19.1.0",
+        "rollup-plugin-visualizer": "^5.14.0",
+        "tailwindcss": "^4.1.4"
+    },
+    "devDependencies": {
+        "@types/bun": "^1.2.10",
+        "@types/node": "^22.14.1",
+        "prettier": "^3.5.3",
+        "prettier-plugin-tailwindcss": "^0.6.11"
+    }
 }
