--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
         "dev": "astro dev",
         "build": "astro build",
         "preview": "astro preview",
-        "astro": "astro"
+        "astro": "astro",
+        "format": "prettier --write ."
     },
     "dependencies": {
         "@astrojs/react": "^4.2.4",
@@ -21,12 +22,18 @@
         "react": "^19.1.0",
         "react-dom": "^19.1.0",
         "rollup-plugin-visualizer": "^5.14.0",
-        "tailwindcss": "^4.1.4"
+        "tailwindcss": "^4.1.4",
+        "zod": "^3.24.3"
     },
     "devDependencies": {
+        "@eslint/js": "^9.25.1",
         "@types/bun": "^1.2.10",
         "@types/node": "^22.14.1",
+        "eslint": "^9.25.1",
+        "eslint-plugin-astro": "^1.3.1",
         "prettier": "^3.5.3",
-        "prettier-plugin-tailwindcss": "^0.6.11"
+        "prettier-plugin-tailwindcss": "^0.6.11",
+        "typescript": "^5.8.3",
+        "typescript-eslint": "^8.31.0"
     }
 }
