--- a/package.json
+++ b/package.json
@@ -10,18 +10,15 @@
         "format": "prettier --write ."
     },
     "dependencies": {
-        "@astrojs/react": "^4.2.4",
+        "@astrojs/preact": "^4.0.9",
         "@astrojs/sitemap": "^3.3.0",
         "@fontsource-variable/fira-code": "^5.2.5",
         "@fontsource-variable/lora": "^5.2.5",
         "@fontsource/fira-sans": "^5.2.5",
+        "@lucide/astro": "^0.503.0",
         "@tailwindcss/vite": "^4.1.4",
-        "@types/react": "^19.1.2",
-        "@types/react-dom": "^19.1.2",
         "astro": "^5.7.4",
-        "react": "^19.1.0",
-        "react-dom": "^19.1.0",
-        "rollup-plugin-visualizer": "^5.14.0",
+        "preact": "^10.26.5",
         "tailwindcss": "^4.1.4",
         "zod": "^3.24.3"
     },
@@ -33,6 +30,7 @@
         "eslint-plugin-astro": "^1.3.1",
         "prettier": "^3.5.3",
         "prettier-plugin-tailwindcss": "^0.6.11",
+        "prettier-plugin-astro": "^0.14.1",
         "typescript": "^5.8.3",
         "typescript-eslint": "^8.31.0"
     }
