--- a/package.json
+++ b/package.json
@@ -10,14 +10,15 @@
         "format": "prettier --write ."
     },
     "dependencies": {
-        "@astrojs/preact": "^4.0.9",
-        "@astrojs/sitemap": "^3.3.0",
+        "@astrojs/preact": "^4.0.10",
+        "@astrojs/sitemap": "^3.3.1",
         "@fontsource-variable/fira-code": "^5.2.5",
         "@fontsource-variable/lora": "^5.2.5",
         "@fontsource/fira-sans": "^5.2.5",
         "@lucide/astro": "^0.503.0",
         "@tailwindcss/vite": "^4.1.4",
-        "astro": "^5.7.4",
+        "astro": "^5.7.5",
+        "d3": "^7.9.0",
         "preact": "^10.26.5",
         "tailwindcss": "^4.1.4",
         "zod": "^3.24.3"
@@ -25,12 +26,13 @@
     "devDependencies": {
         "@eslint/js": "^9.25.1",
         "@types/bun": "^1.2.10",
+        "@types/d3": "^7.4.3",
         "@types/node": "^22.14.1",
         "eslint": "^9.25.1",
         "eslint-plugin-astro": "^1.3.1",
         "prettier": "^3.5.3",
-        "prettier-plugin-tailwindcss": "^0.6.11",
         "prettier-plugin-astro": "^0.14.1",
+        "prettier-plugin-tailwindcss": "^0.6.11",
         "typescript": "^5.8.3",
         "typescript-eslint": "^8.31.0"
     }
