--- a/package.json
+++ b/package.json
@@ -16,7 +16,6 @@
         "@fontsource-variable/lora": "^5.2.5",
         "@fontsource/fira-sans": "^5.2.5",
         "@lucide/astro": "^0.503.0",
-        "@tailwindcss/vite": "^4.1.4",
         "astro": "^5.7.5",
         "d3": "^7.9.0",
         "preact": "^10.26.5",
@@ -25,9 +24,11 @@
     },
     "devDependencies": {
         "@eslint/js": "^9.25.1",
+        "@tailwindcss/vite": "^4.1.4",
         "@types/bun": "^1.2.10",
         "@types/d3": "^7.4.3",
-        "@types/node": "^22.14.1",
+        "@types/node": "^22.15.2",
+        "astro-compress": "^2.3.8",
         "eslint": "^9.25.1",
         "eslint-plugin-astro": "^1.3.1",
         "prettier": "^3.5.3",
