--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     },
     "devDependencies": {
         "@eslint/js": "^9.25.1",
+        "@ianvs/prettier-plugin-sort-imports": "^4.4.1",
         "@tailwindcss/vite": "^4.1.4",
         "@types/bun": "^1.2.10",
         "@types/d3": "^7.4.3",
