--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
         "@fontsource/fira-sans": "^5.2.5",
         "@lucide/astro": "^0.503.0",
         "astro": "^5.7.5",
+        "compress-json": "^3.1.1",
         "d3": "^7.9.0",
         "preact": "^10.26.5",
         "tailwindcss": "^4.1.4",
