--- a/package.json
+++ b/package.json
@@ -16,7 +16,9 @@
         "@fontsource-variable/lora": "^5.2.5",
         "@fontsource/fira-sans": "^5.2.5",
         "@lucide/astro": "^0.503.0",
+        "@tailwindcss/typography": "^0.5.16",
         "astro": "^5.7.5",
+        "astro-expressive-code": "^0.41.2",
         "compress-json": "^3.1.1",
         "d3": "^7.9.0",
         "preact": "^10.26.5",
