--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
         "compress-json": "^3.1.1",
         "d3": "^7.9.0",
         "preact": "^10.26.5",
+        "rehype-external-links": "^3.0.0",
         "tailwindcss": "^4.1.4",
         "zod": "^3.24.3"
     },
