--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
         "@fontsource/fira-sans": "^5.2.5",
         "@lucide/astro": "^0.503.0",
         "@portaljs/remark-wiki-link": "^1.2.0",
+        "@r4ai/remark-callout": "^0.6.2",
         "@tailwindcss/typography": "^0.5.16",
         "astro": "^5.7.11",
         "astro-expressive-code": "^0.41.2",
@@ -24,6 +25,7 @@
         "d3": "^7.9.0",
         "preact": "^10.26.6",
         "rehype-external-links": "^3.0.0",
+        "rehype-shift-heading": "^2.0.0",
         "tailwindcss": "^4.1.5",
         "unist-util-visit": "^5.0.0",
         "zod": "^3.24.4"
