--- a/package.json
+++ b/package.json
@@ -10,33 +10,34 @@
         "format": "prettier --write ."
     },
     "dependencies": {
-        "@astrojs/preact": "^4.0.11",
         "@astrojs/sitemap": "^3.3.1",
         "@fontsource-variable/fira-code": "^5.2.6",
         "@fontsource-variable/lora": "^5.2.5",
-        "@fontsource/fira-sans": "^5.2.5",
+        "@fontsource-variable/open-sans": "^5.2.5",
         "@lucide/astro": "^0.503.0",
+        "@nanostores/persistent": "^1.0.0",
         "@portaljs/remark-wiki-link": "^1.2.0",
         "@r4ai/remark-callout": "^0.6.2",
         "@tailwindcss/typography": "^0.5.16",
-        "astro": "^5.7.11",
+        "astro": "^5.7.12",
         "astro-expressive-code": "^0.41.2",
         "compress-json": "^3.1.1",
         "d3": "^7.9.0",
+        "nanostores": "^1.0.1",
         "preact": "^10.26.6",
         "rehype-external-links": "^3.0.0",
         "rehype-shift-heading": "^2.0.0",
-        "tailwindcss": "^4.1.5",
+        "tailwindcss": "^4.1.6",
         "unist-util-visit": "^5.0.0",
         "zod": "^3.24.4"
     },
     "devDependencies": {
         "@eslint/js": "^9.26.0",
         "@ianvs/prettier-plugin-sort-imports": "^4.4.1",
-        "@tailwindcss/vite": "^4.1.5",
-        "@types/bun": "^1.2.12",
+        "@tailwindcss/vite": "^4.1.6",
+        "@types/bun": "^1.2.13",
         "@types/d3": "^7.4.3",
-        "@types/node": "^22.15.14",
+        "@types/node": "^22.15.17",
         "astro-compress": "^2.3.8",
         "eslint": "^9.26.0",
         "eslint-plugin-astro": "^1.3.1",
