--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     },
     "dependencies": {
         "@astrojs/sitemap": "^3.4.0",
+        "@fontsource-variable/lora": "^5.2.5",
         "@lucide/astro": "^0.503.0",
         "@nanostores/persistent": "^1.0.0",
         "@portaljs/remark-wiki-link": "^1.2.0",
@@ -18,6 +19,8 @@
         "@tailwindcss/typography": "^0.5.16",
         "astro": "^5.8.0",
         "astro-expressive-code": "^0.41.2",
+        "astro-og-canvas": "^0.7.0",
+        "astro-seo": "^0.8.4",
         "compress-json": "^3.1.1",
         "d3": "^7.9.0",
         "nanostores": "^1.0.1",
