--- a/package.json
+++ b/package.json
@@ -23,13 +23,14 @@
         "astro-seo": "^0.8.4",
         "compress-json": "^3.1.1",
         "d3": "^7.9.0",
+        "dayjs": "^1.11.13",
         "nanostores": "^1.0.1",
         "preact": "^10.26.6",
         "rehype-external-links": "^3.0.0",
         "rehype-shift-heading": "^2.0.0",
         "tailwindcss": "^4.1.7",
         "unist-util-visit": "^5.0.0",
-        "zod": "^3.25.23"
+        "zod": "^3.25.28"
     },
     "devDependencies": {
         "@eslint/js": "^9.27.0",
