--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,3 +1,3 @@
 {
-    "tailwindCSS.experimental.configFile": "./src/styles/global.css"
+    "tailwindCSS.experimental.configFile": "./src/global.css"
 }
