--- a/package.json
+++ b/package.json
@@ -24,13 +24,15 @@
         "compress-json": "^3.1.1",
         "d3": "^7.9.0",
         "dayjs": "^1.11.13",
+        "feed": "^5.0.1",
         "nanostores": "^1.0.1",
         "preact": "^10.26.7",
         "rehype-external-links": "^3.0.0",
         "rehype-shift-heading": "^2.0.0",
+        "sanitize-html": "^2.17.0",
         "tailwindcss": "^4.1.7",
         "unist-util-visit": "^5.0.0",
-        "zod": "^3.25.28"
+        "zod": "^3.25.30"
     },
     "devDependencies": {
         "@eslint/js": "^9.27.0",
@@ -46,7 +48,9 @@
         "prettier-plugin-astro": "^0.14.1",
         "prettier-plugin-tailwindcss": "^0.6.11",
         "typescript": "^5.8.3",
-        "typescript-eslint": "^8.32.1"
+        "typescript-eslint": "^8.32.1",
+        "@types/dompurify": "^3.2.0",
+        "@types/sanitize-html": "^2.16.0"
     },
     "patchedDependencies": {
         "@portaljs/remark-wiki-link@1.2.0": "patches/@portaljs%2Fremark-wiki-link@1.2.0.patch"
