--- a/package.json
+++ b/package.json
@@ -24,23 +24,24 @@
         "compress-json": "^3.1.1",
         "d3": "^7.9.0",
         "dayjs": "^1.11.13",
-        "feed": "^5.0.1",
+        "feed": "^5.1.0",
         "nanostores": "^1.0.1",
         "preact": "^10.26.7",
         "rehype-external-links": "^3.0.0",
         "rehype-shift-heading": "^2.0.0",
         "sanitize-html": "^2.17.0",
-        "tailwindcss": "^4.1.7",
+        "tailwindcss": "^4.1.8",
         "unist-util-visit": "^5.0.0",
-        "zod": "^3.25.30"
+        "zod": "^3.25.34"
     },
     "devDependencies": {
         "@eslint/js": "^9.27.0",
-        "@ianvs/prettier-plugin-sort-imports": "^4.4.1",
-        "@tailwindcss/vite": "^4.1.7",
-        "@types/bun": "^1.2.14",
+        "@ianvs/prettier-plugin-sort-imports": "^4.4.2",
+        "@tailwindcss/vite": "^4.1.8",
+        "@types/bun": "^1.2.15",
         "@types/d3": "^7.4.3",
-        "@types/node": "^22.15.21",
+        "@types/node": "^22.15.24",
+        "@types/sanitize-html": "^2.16.0",
         "astro-compress": "^2.3.8",
         "eslint": "^9.27.0",
         "eslint-plugin-astro": "^1.3.1",
@@ -48,9 +49,7 @@
         "prettier-plugin-astro": "^0.14.1",
         "prettier-plugin-tailwindcss": "^0.6.11",
         "typescript": "^5.8.3",
-        "typescript-eslint": "^8.32.1",
-        "@types/dompurify": "^3.2.0",
-        "@types/sanitize-html": "^2.16.0"
+        "typescript-eslint": "^8.33.0"
     },
     "patchedDependencies": {
         "@portaljs/remark-wiki-link@1.2.0": "patches/@portaljs%2Fremark-wiki-link@1.2.0.patch"
