--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
         "d3": "^7.9.0",
         "dayjs": "^1.11.13",
         "feed": "^5.1.0",
+        "giscus": "^1.6.0",
         "nanostores": "^1.0.1",
         "preact": "^10.26.8",
         "rehype-external-links": "^3.0.0",
