--- a/package.json
+++ b/package.json
@@ -10,18 +10,19 @@
         "format": "prettier --write ."
     },
     "dependencies": {
-        "@astrojs/sitemap": "^3.4.0",
-        "@fontsource-variable/lora": "^5.2.5",
-        "@lucide/astro": "^0.511.0",
+        "@astrojs/sitemap": "^3.4.1",
+        "@fontsource-variable/lora": "^5.2.6",
+        "@lucide/astro": "^0.513.0",
         "@nanostores/persistent": "^1.0.0",
         "@portaljs/remark-wiki-link": "^1.2.0",
         "@r4ai/remark-callout": "^0.6.2",
         "@tailwindcss/typography": "^0.5.16",
-        "astro": "^5.8.1",
+        "astro": "^5.9.1",
         "astro-expressive-code": "^0.41.2",
         "astro-og-canvas": "^0.7.0",
+        "astro-pagefind": "^1.8.3",
         "astro-seo": "^0.8.4",
-        "compress-json": "^3.1.1",
+        "compress-json": "^3.1.2",
         "d3": "^7.9.0",
         "dayjs": "^1.11.13",
         "feed": "^5.1.0",
@@ -33,7 +34,7 @@
         "sanitize-html": "^2.17.0",
         "tailwindcss": "^4.1.8",
         "unist-util-visit": "^5.0.0",
-        "zod": "^3.25.42"
+        "zod": "^3.25.56"
     },
     "devDependencies": {
         "@eslint/js": "^9.28.0",
@@ -41,7 +42,7 @@
         "@tailwindcss/vite": "^4.1.8",
         "@types/bun": "^1.2.15",
         "@types/d3": "^7.4.3",
-        "@types/node": "^22.15.29",
+        "@types/node": "^22.15.30",
         "@types/sanitize-html": "^2.16.0",
         "astro-compress": "^2.3.8",
         "eslint": "^9.28.0",
@@ -50,8 +51,8 @@
         "prettier-plugin-astro": "^0.14.1",
         "prettier-plugin-tailwindcss": "^0.6.12",
         "typescript": "^5.8.3",
-        "typescript-eslint": "^8.33.0",
-        "vite-plugin-devtools-json": "^0.1.0"
+        "typescript-eslint": "^8.33.1",
+        "vite-plugin-devtools-json": "^0.1.1"
     },
     "patchedDependencies": {
         "@portaljs/remark-wiki-link@1.2.0": "patches/@portaljs%2Fremark-wiki-link@1.2.0.patch"
