--- a/package.json
+++ b/package.json
@@ -10,49 +10,49 @@
         "format": "prettier --write ."
     },
     "dependencies": {
-        "@astrojs/sitemap": "^3.5.1",
-        "@fontsource-variable/lora": "^5.2.6",
-        "@lucide/astro": "^0.513.0",
+        "@astrojs/sitemap": "^3.6.0",
+        "@fontsource-variable/lora": "^5.2.8",
+        "@lucide/astro": "^0.544.0",
         "@nanostores/persistent": "^1.1.0",
         "@portaljs/remark-wiki-link": "^1.2.0",
         "@r4ai/remark-callout": "^0.6.2",
-        "@tailwindcss/typography": "^0.5.16",
-        "astro": "^5.13.5",
+        "@tailwindcss/typography": "^0.5.19",
+        "astro": "^5.14.1",
         "astro-expressive-code": "^0.41.3",
         "astro-og-canvas": "^0.7.0",
-        "astro-pagefind": "^1.8.4",
+        "astro-pagefind": "^1.8.5",
         "astro-seo": "^0.8.4",
-        "compress-json": "^3.3.0",
+        "compress-json": "^3.4.0",
         "d3": "^7.9.0",
         "dayjs": "^1.11.18",
         "feed": "^5.1.0",
         "giscus": "^1.6.0",
         "nanostores": "^1.0.1",
-        "preact": "^10.27.1",
+        "preact": "^10.27.2",
         "rehype-external-links": "^3.0.0",
         "rehype-shift-heading": "^2.0.0",
         "sanitize-html": "^2.17.0",
-        "tailwindcss": "^4.1.12",
-        "unist-util-visit": "^5.0.0",
-        "zod": "^3.25.76"
+        "tailwindcss": "^4.1.13",
+        "unist-util-visit": "^5.0.0"
     },
     "devDependencies": {
-        "@eslint/js": "^9.34.0",
+        "@eslint/js": "^9.36.0",
         "@ianvs/prettier-plugin-sort-imports": "^4.7.0",
-        "@tailwindcss/vite": "^4.1.12",
-        "@types/bun": "^1.2.21",
+        "@tailwindcss/vite": "^4.1.13",
+        "@types/bun": "^1.2.22",
         "@types/d3": "^7.4.3",
-        "@types/node": "^22.18.0",
+        "@types/node": "^24.5.2",
         "@types/sanitize-html": "^2.16.0",
         "astro-compress": "^2.3.8",
-        "eslint": "^9.34.0",
+        "eslint": "^9.36.0",
         "eslint-plugin-astro": "^1.3.1",
         "prettier": "^3.6.2",
         "prettier-plugin-astro": "^0.14.1",
         "prettier-plugin-tailwindcss": "^0.6.14",
         "typescript": "^5.9.2",
-        "typescript-eslint": "^8.41.0",
-        "vite-plugin-devtools-json": "^0.1.1"
+        "typescript-eslint": "^8.44.1",
+        "vite-plugin-devtools-json": "^1.0.0",
+        "wrangler": "^4.40.2"
     },
     "patchedDependencies": {
         "@portaljs/remark-wiki-link@1.2.0": "patches/@portaljs%2Fremark-wiki-link@1.2.0.patch"
