Begin adding bookmarks page
Signed-off-by: Abhi Agarwal <abhiaagarwal01@gmail.com>

--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
         "format": "prettier --write ."
     },
     "dependencies": {
+        "@ascorbic/csv-loader": "^2.0.3",
         "@astrojs/sitemap": "^3.6.0",
         "@fontsource-variable/lora": "^5.2.8",
         "@lucide/astro": "^0.544.0",
