--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
         "dayjs": "^1.11.19",
         "feed": "^5.1.0",
         "giscus": "^1.6.0",
+        "htmx.org": "2.0.8",
         "nanostores": "^1.0.1",
         "preact": "^10.27.2",
         "rehype-external-links": "^3.0.0",
@@ -37,7 +38,7 @@
         "unist-util-visit": "^5.0.0"
     },
     "devDependencies": {
-        "@eslint/js": "^9.39.1",
+        "@biomejs/biome": "2.3.5",
         "@ianvs/prettier-plugin-sort-imports": "^4.7.0",
         "@tailwindcss/vite": "^4.1.17",
         "@types/bun": "^1.3.2",
@@ -45,13 +46,10 @@
         "@types/node": "^24.10.1",
         "@types/sanitize-html": "^2.16.0",
         "astro-compress": "^2.3.8",
-        "eslint": "^9.39.1",
-        "eslint-plugin-astro": "^1.5.0",
         "prettier": "^3.6.2",
         "prettier-plugin-astro": "^0.14.1",
         "prettier-plugin-tailwindcss": "^0.6.14",
         "typescript": "^5.9.3",
-        "typescript-eslint": "^8.46.4",
         "vite-plugin-devtools-json": "^1.0.0",
         "wrangler": "^4.47.0"
     },
