--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
         "compress-json": "^3.4.0",
         "d3": "^7.9.0",
         "dayjs": "^1.11.19",
+        "es-toolkit": "^1.41.0",
         "feed": "^5.1.0",
         "giscus": "^1.6.0",
         "htmx.org": "2.0.8",
