--- a/package.json
+++ b/package.json
@@ -13,8 +13,8 @@
         "@ascorbic/csv-loader": "^2.0.3",
         "@astrojs/sitemap": "^3.6.0",
         "@fontsource-variable/lora": "^5.2.8",
-        "@lucide/astro": "^0.544.0",
-        "@nanostores/persistent": "^1.2.0",
+        "@lucide/astro": "^0.553.0",
+        "@playform/compress": "^0.2.0",
         "@portaljs/remark-wiki-link": "^1.2.0",
         "@r4ai/remark-callout": "^0.6.2",
         "@tailwindcss/typography": "^0.5.19",
@@ -31,7 +31,6 @@
         "giscus": "^1.6.0",
         "htmx.org": "2.0.8",
         "nanostores": "^1.0.1",
-        "preact": "^10.27.2",
         "rehype-external-links": "^3.0.0",
         "rehype-shift-heading": "^2.0.0",
         "sanitize-html": "^2.17.0",
@@ -46,10 +45,9 @@
         "@types/d3": "^7.4.3",
         "@types/node": "^24.10.1",
         "@types/sanitize-html": "^2.16.0",
-        "astro-compress": "^2.3.8",
         "prettier": "^3.6.2",
         "prettier-plugin-astro": "^0.14.1",
-        "prettier-plugin-tailwindcss": "^0.6.14",
+        "prettier-plugin-tailwindcss": "^0.7.1",
         "typescript": "^5.9.3",
         "vite-plugin-devtools-json": "^1.0.0",
         "wrangler": "^4.47.0"
