--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
         "@tailwindcss/typography": "^0.5.19",
         "astro": "^5.16.0",
         "astro-expressive-code": "^0.41.3",
+        "astro-favicons": "^3.1.5",
         "astro-og-canvas": "^0.7.2",
         "astro-pagefind": "^1.8.5",
         "astro-seo": "^0.8.4",
